--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="page-header">
-  <h1> Hello! Emily's game <br> <small>Clique em começar e veja se você é topster</small> <br>  <p><a class="btn btn-primary btn-lg" href="fases/fase1.html" role="button">Começar</a></p> </h1>
+  <h1> Hello! Emily's game <br> <small>Clique em começar e veja se você é topster</small> <br>  <p><a class="btn btn-primary btn-lg" href="fases/faseum.html" role="button">Começar</a></p> </h1>
 </div>
 
 
