--- a/fases/Venceu.html
+++ b/fases/Venceu.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emily's Game</title>
-    <link rel="icon" href="imagens/emily'sgame.ico">
-    <link href="boost/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="myccs.css">
+    <link rel="icon" href="../imagens/emily'sgame.ico">
+    <link href="../boost/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../myccs.css">
 
     </head>
   <body>
@@ -22,8 +22,13 @@
         </div>
 
         <div class="page-header">
-  <h1> Hello! Emily's game <br> <small>Clique em começar e veja se você é topster</small> <br>  <p><a class="btn btn-primary btn-lg" href="fases/faseum.html" role="button">Começar</a></p> </h1>
+  <h1> PARABÊNS! VOCÊ É TOPSTER!!! <br> <!-- <small>ASSISTA O VIDEO</small> --> <br>
+<!--<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="..."></iframe>
+</div> -->
+    <p><a class="btn btn-primary btn-lg" href="../index.html" role="button">Voltar</a></p> </h1>
 </div>
+
 
 
 </body>
