--- a/fases/fasesete.html
+++ b/fases/fasesete.html
@@ -44,7 +44,7 @@
           <div class="caption">
             <h3>Ser compreensivo</h3>
             <p>Ajude ela a tomar a melhor decisão com calma e paciência</p>
-            <p><a href="venceu.html" class="btn btn-primary" role="button">Essa</a> 
+            <p><a href="Venceu.html" class="btn btn-primary" role="button">Essa</a> 
           </div>
         </div>
       </div>
